# morsify

./: Cargo.toml  README.md  lints.toml
.github/workflows/: release.yml  rust-clippy.yml
src/: lib.rs
